--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "starter"
   ],
   "main": "src/index.js",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
